title and caption Fig S9

--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -618,6 +618,7 @@ res4 <- cbind(input, output4)
 par(mfrow=c(2,2), mar=c(3,3,1,1))
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+title("DIN=1e-7 mol/L; X=2e-6 mol/L")
 points(c(48,48,53,53), c(0.22,0.23,0.22,0.23), pch=c(19,1,19,1), cex=c(0.4,1,0.4,1), col=c("black","black","red","red"), xpd=T)
 text(38, 0.225, labels="init. S:H", xpd=T, cex=0.7, srt=90)
 text(46, c(0.22,0.23), labels=c("0.1", "0.0001"), xpd=T, pos=2, cex=0.7)
@@ -631,6 +632,7 @@ apply(res1, 1, FUN=function(x) {
 })
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+title("DIN=1e-7 mol/L; X=1e-6 mol/L")
 apply(res2, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
@@ -639,6 +641,7 @@ apply(res2, 1, FUN=function(x) {
 })
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+title("DIN=1e-6 mol/L; X=2e-6 mol/L")
 apply(res3, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
@@ -647,6 +650,7 @@ apply(res3, 1, FUN=function(x) {
 })
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+title("DIN=1e-6 mol/L; X=4e-6 mol/L")
 apply(res4, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
@@ -655,5 +659,8 @@ apply(res4, 1, FUN=function(x) {
 })
 
 ```
+
+These figures show steady state S:H biomass ratios in constant environments with varying DIN and food (X) levels, with initial S:H biomass values of either 0.1 or 0.0001. Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state.
+
 
 ## References
