add large overshoot points to top FigS9

--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -629,6 +629,10 @@ apply(res1, 1, FUN=function(x) {
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
+  with(x[x$sh>0.3, ], {
+    points(L, rep(0.3, length(L)), pch="^", col="red")
+    points(L, rep(0.29, length(L)), pch=1, col="red", cex=1)
+  })
 })
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
@@ -638,6 +642,10 @@ apply(res2, 1, FUN=function(x) {
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
+  with(x[x$sh>0.3, ], {
+    points(L, rep(0.3, length(L)), pch="^", col="red")
+    points(L, rep(0.29, length(L)), pch=1, col="red", cex=1)
+  })
 })
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
@@ -647,6 +655,10 @@ apply(res3, 1, FUN=function(x) {
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
+  with(x[x$sh>0.3, ], {
+    points(L, rep(0.3, length(L)), pch="^", col="red")
+    points(L, rep(0.29, length(L)), pch=1, col="red", cex=1)
+  })
 })
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
@@ -656,6 +668,10 @@ apply(res4, 1, FUN=function(x) {
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
+  with(x[x$sh>0.3, ], {
+    points(L, rep(0.3, length(L)), pch="^", col="red")
+    points(L, rep(0.29, length(L)), pch=1, col="red", cex=1)
+  })
 })
 
 ```
