--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -581,7 +581,7 @@ cl <- makeCluster(detectCores())  # Initiate cluster
 registerDoParallel(cl)
 
 # Set input values for steady state runs
-input <- expand.grid(L=seq(10,55,1), initS=c(0.0001,0.1))
+input <- expand.grid(L=seq(1,60,1), initS=c(0.0001,0.1))
 
 # Run steady states in parallel
 output1 <- foreach(i=1:nrow(input), .combine=rbind) %dopar% {
@@ -615,7 +615,7 @@ res4 <- cbind(input, output4)
 
 ```{r plotFigS9, cache=T, fig.width=7, fig.height=7, echo=F, message=F}
 # Create plot
-par(mfrow=c(2,2), mar=c(3,3,1,1))
+par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(1.5,0.5,0), tcl=-0.025)
 
 plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-7 mol/L; X=2e-6 mol/L")
