--- a/JTB_supp/JTB_supp.Rmd
+++ b/JTB_supp/JTB_supp.Rmd
@@ -617,7 +617,7 @@ res4 <- cbind(input, output4)
 # Create plot
 par(mfrow=c(2,2), mar=c(3,3,1,1), mgp=c(1.5,0.5,0), tcl=-0.025)
 
-plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+plot(NA, xlim=range(input$L), ylim=c(0,0.5), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-7 mol/L; X=2e-6 mol/L")
 points(c(48,48,53,53), c(0.22,0.23,0.22,0.23), pch=c(19,1,19,1), cex=c(0.4,1,0.4,1), col=c("black","black","red","red"), xpd=T)
 text(38, 0.225, labels="init. S:H", xpd=T, cex=0.7, srt=90)
@@ -629,48 +629,64 @@ apply(res1, 1, FUN=function(x) {
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
-  with(x, if (sh > 0.3) {
-    points(L, 0.3, pch="^", col="red")
-    points(L, 0.29, pch=1, col="red", cex=1)
+  with(x, if (sh > 0.5) {
+    points(L, 0.5, pch="^", 
+           col=ifelse(gr>0, "black", "red"))
+    points(L, 0.49, 
+           col=ifelse(gr>0, "black", "red"),
+           pch=ifelse(initS==1e-01, 19, 1), 
+           cex=ifelse(initS==1e-01, 0.4, 1))
   })
 })
 
-plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+plot(NA, xlim=range(input$L), ylim=c(0,0.5), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-7 mol/L; X=1e-6 mol/L")
 apply(res2, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
-  with(x, if (sh > 0.3) {
-    points(L, 0.3, pch="^", col="red")
-    points(L, 0.29, pch=1, col="red", cex=1)
+  with(x, if (sh > 0.5) {
+    points(L, 0.5, pch="^", 
+           col=ifelse(gr>0, "black", "red"))
+    points(L, 0.49, 
+           col=ifelse(gr>0, "black", "red"),
+           pch=ifelse(initS==1e-01, 19, 1), 
+           cex=ifelse(initS==1e-01, 0.4, 1))
   })
 })
 
-plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+plot(NA, xlim=range(input$L), ylim=c(0,0.5), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-6 mol/L; X=2e-6 mol/L")
 apply(res3, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
-  with(x, if (sh > 0.3) {
-    points(L, 0.3, pch="^", col="red")
-    points(L, 0.29, pch=1, col="red", cex=1)
+  with(x, if (sh > 0.5) {
+    points(L, 0.5, pch="^", 
+           col=ifelse(gr>0, "black", "red"))
+    points(L, 0.49, 
+           col=ifelse(gr>0, "black", "red"),
+           pch=ifelse(initS==1e-01, 19, 1), 
+           cex=ifelse(initS==1e-01, 0.4, 1))
   })
 })
 
-plot(NA, xlim=range(input$L), ylim=c(0,0.3), xlab="Light", ylab="Steady state S:H ratio")
+plot(NA, xlim=range(input$L), ylim=c(0,0.5), xlab="Light", ylab="Steady state S:H ratio")
 title("DIN=1e-6 mol/L; X=4e-6 mol/L")
 apply(res4, 1, FUN=function(x) {
   with(x, points(L, sh,
                  col=ifelse(gr>0, "black", "red"), 
                  pch=ifelse(initS==1e-01, 19, 1), 
                  cex=ifelse(initS==1e-01, 0.4, 1)))
-  with(x, if (sh > 0.3) {
-    points(L, 0.3, pch="^", col="red")
-    points(L, 0.29, pch=1, col="red", cex=1)
+  with(x, if (sh > 0.5) {
+    points(L, 0.5, pch="^", 
+           col=ifelse(gr>0, "black", "red"))
+    points(L, 0.49, 
+           col=ifelse(gr>0, "black", "red"),
+           pch=ifelse(initS==1e-01, 19, 1), 
+           cex=ifelse(initS==1e-01, 0.4, 1))
   })
 })
 
